reajuste los tamaños de las imgs de cada area asi son responsive y parejas

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 		
 	<div class="row align-items-center justify-content-evenly pd__noticias">
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
-			<a href="https://alanxelmundo.com/la-patagonia-enamora/" target="blanck_"><img class="img-fluid rounded" src="assets/imagenes/patagonia.jpeg" width="450" height="350" alt="patagonia"></a>
+			<a href="https://alanxelmundo.com/la-patagonia-enamora/" target="blanck_"><img class=" rounded" src="assets/imagenes/patagonia.jpeg" width="100%" height="300" alt="patagonia"></a>
 			<h4 class="wow slideInRight">La Patagonia Enamora</h4>
 			<p class="wow slideInRight">Una Experiencia en la Patagonia Argentina.</p>		
 		</div>
 
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
-			<a href="https://alanxelmundo.com/curiosidades-de-paris/" target="blanck_"><img class="img-fluid rounded" src="assets/imagenes/paris-not.jpg" width="450" height="350" alt="paris"></a>	
+			<a href="https://alanxelmundo.com/curiosidades-de-paris/" target="blanck_"><img class=" rounded" src="assets/imagenes/paris-not.jpg" width="100%" height="300" alt="paris"></a>	
 			<h4 class="wow slideInRight">Curiosidades de Paris</h4>
 			<p class="wow slideInRight">Te enseñamos algunas cualidades que talvez no conocias sobre Paris.</p>
 		</div>
@@ -113,13 +113,13 @@
 
 	<div class="row align-items-center justify-content-evenly pd__noticias">
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
-			<a href="https://www.unaargentinaensuiza.com/post/10-lugares-imprescindibles-en-zurich" target="blanck_"><img class="img-fluid rounded" src="assets/imagenes/zurich.jpg" width="450" height="350" alt="zurich"></a>	
+			<a href="https://www.unaargentinaensuiza.com/post/10-lugares-imprescindibles-en-zurich" target="blanck_"><img class=" rounded" src="assets/imagenes/zurich.jpg" width="100%" height="300" alt="zurich"></a>	
 			<h4 class="wow slideInRight">10 Lugares Impresionantes en Zurich</h4>
 			<p class="wow slideInRight">Mica Te enseña 10 lugares que tenes que ir si visitas Zurich.</p>	
 		</div>
 		
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
-			<a href="https://alanxelmundo.com/15-tips-de-viaje-para-principiantes/" target="blanck_"><img class="img-fluid rounded" src="assets/imagenes/not-tips.jpg" width="450" height="350" alt="persona1"></a>
+			<a href="https://alanxelmundo.com/15-tips-de-viaje-para-principiantes/" target="blanck_"><img class=" rounded" src="assets/imagenes/not-tips.jpg" width="100%" height="300" alt="persona1"></a>
 			<h4 class="wow slideInRight">15 Tips de Viajes</h4>
 			<p class="wow slideInRight">Si acabas de iniciarte en los viajes y no sabes armar ni tu maleta, este post te será de mucha ayuda.</p>
 		</div>
@@ -144,7 +144,7 @@
 	
 	<div class="row">
 		<div class="col-lg-7 col-md-7 col-xs-12 col-sm-12 wow slideInLeft">
-			<img class="img-fluid rounded" src="assets/imagenes/senderista.jpeg" width="600" height="200" alt="persona1">
+			<img class=" rounded" src="assets/imagenes/senderista.jpeg" width="100%" height="250" alt="senderista">
 		</div>
 
 		<div class="col-lg-5 col-md-5 col-xs-12 col-sm-12 wow slideInRight">
@@ -168,7 +168,7 @@
 			<p class="justify wow slideInRight">Mica es una Argentina que emigro a Suiza y te cuenta su experiencia por si te interesa Vivir En Suiza.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6">
-			<a href="https://www.unaargentinaensuiza.com/vivir-y-emigrar-a-suiza" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/suiza.jpg" width="500" height="180" alt="suiza"></a>
+			<a href="https://www.unaargentinaensuiza.com/vivir-y-emigrar-a-suiza" target="blanck_"><img class="wow slideInRight right rounded" src="assets/imagenes/suiza.jpg" width="100%" height="250" alt="suiza"></a>
 		</div>
 	</div>
 
@@ -179,7 +179,7 @@
 			<p class="justify wow slideInRight">En este Blog te Explicamos como es emigrar a Canada, Por si te interesa Vivir En Canada.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 ">
-			<a href="https://growproexperience.com/canada/vivir-y-trabajar-en-canada/" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/canada.jpg" width="500" height="180" alt="canada"></a>
+			<a href="https://growproexperience.com/canada/vivir-y-trabajar-en-canada/" target="blanck_"><img class="wow slideInRight right rounded" src="assets/imagenes/canada.jpg" width="100%" height="250" alt="canada"></a>
 		</div>
 	</div>
 
@@ -190,7 +190,7 @@
 			<p class="justify wow slideInRight">En este Post ses explica como es conseguir trabajo y como emigrar a España, por si te interesa Vivir En España.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 ">
-			<a href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/españa.jpg" width="500" height="180" alt="españa"></a>
+			<a href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/españa.jpg" width="100%" height="250" alt="españa"></a>
 		</div>
 	</div>
 </div>
@@ -206,19 +206,19 @@
 <div class="container ">
 	<div class="row">
 		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
-			<img class="img-fluid wow slideInLeft rounded" src="assets/imagenes/viajero1.jpg" width="300" height="300" alt="persona1">
+			<img class="wow slideInLeft rounded" src="assets/imagenes/viajero1.jpg" width="100%" height="250" alt="persona1">
 			<h4 class="wow fadeInLeft">Alan</h4>
 			<p class="wow fadeInLeft">Viajero Mexicano/ Actor/ 40 Años</p>
 			<p class="wow fadeInLeft">Redes Sociales</p>
 		</div>
 		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
-			<img class="img-fluid wow slideInLeft rounded" src="assets/imagenes/viajero2.jpg" width="300" height="300" alt="persona2">
+			<img class="wow slideInLeft rounded" src="assets/imagenes/viajero2.jpg" width="100%" height="250" alt="persona2">
 			<h4 class="wow fadeInLeft">Matias</h4>
 			<p class="wow fadeInLeft">Viajero Argentino/ Lic. Administracion / 21 Años</p>
 			<p class="wow fadeInLeft">Redes Sociales</p>
 		</div>
 		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
-			<img class="img-fluid wow slideInLeft rounded" src="assets/imagenes/viajero3.jpg" width="300" height="300" alt="persona3">
+			<img class="wow slideInLeft rounded" src="assets/imagenes/viajero3.jpg" width="100%" height="250" alt="persona3">
 			<h4 class="wow fadeInLeft">Luis</h4>
 			<p class="wow fadeInLeft">Viajero Mexicano/ YouTuber / 30 años</p>
 			<p class="wow fadeInLeft">Redes Sociales</p>
