--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -65,7 +65,7 @@
 	
 		<div class="row justify-content-around">
 			<div class="col-lg-6 col-sm-12 col-xs-12 col-md-6">
-				<img class="img-fluid rounded wow fadeInDown" src="../assets/imagenes/senderista.jpeg" width="450" height="250" alt="persona1">	
+				<img class="rounded wow fadeInDown" src="../assets/imagenes/senderista.jpeg" width="100%" height="250" alt="persona1">	
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 				<p class="wow fadeInRight">Somos una Red de Divulgacion de turismo y emigraciones, que busca dar a luz el espiritu aventurero de cada persona, ademas de brindarte toda la informacion posible para tus planes turisticos.</p>
@@ -101,7 +101,7 @@
 		</div>
 
 		<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-				<a href="https://www.instagram.com/matiicarballo_/?hl=es" target="blanck_"><img class="wow slideInLeft rounded" src="../assets/imagenes/viajero2.jpg" alt="persona 2"></a>
+				<a href="https://www.instagram.com/matiicarballo_/?hl=es" target="blanck_"><img class="wow slideInLeft rounded" src="../assets/imagenes/viajero2.jpg" width="100%" height="250" alt="persona 2"></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-12 col-xs-12">
 			<p>Me Llamo Matias, Soy un estudiante de Administracion y de Desarrollo Front-end, Este  es mi proyecto final en el cual intento implementar recursos que me han enseñado en el curso de CoderHouse espero que les guste!.</p>
