--- a/pages/vivir-en.html
+++ b/pages/vivir-en.html
@@ -89,7 +89,7 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6  col-sm-6">
-				<a href="https://www.unaargentinaensuiza.com/vivir-y-emigrar-a-suiza" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/suiza.jpg" width="500" height="180" alt="suiza"></a>
+				<a href="https://www.unaargentinaensuiza.com/vivir-y-emigrar-a-suiza" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/suiza.jpg" width="100%" height="250" alt="suiza"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Suiza</h4>
@@ -100,7 +100,7 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<a href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/españa.jpg" width="500" height="180" alt="españa"></a>
+				<a href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino"><img class=" wow slideInRight right rounded" src="../assets/imagenes/españa.jpg" width="100%" height="250" alt="españa"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En España</h4>
@@ -111,7 +111,7 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<a href="https://www.yomeanimo.com/nacho-en-berlin-su-experiencia-con-la-working-holiday-alemania" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/berlin.jpg" width="500" height="180" alt="alemania"></a>
+				<a href="https://www.yomeanimo.com/nacho-en-berlin-su-experiencia-con-la-working-holiday-alemania" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/berlin.jpg" width="100%" height="250" alt="alemania"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Alemania</h4>
@@ -131,7 +131,7 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<a href="https://www.yomeanimo.com/vivir-y-trabajar-en-corea-la-experiencia-working-holiday-de-israel" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/corea.jpg" width="500" height="180" alt="corea"></a>
+				<a href="https://www.yomeanimo.com/vivir-y-trabajar-en-corea-la-experiencia-working-holiday-de-israel" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/corea.jpg" width="100%" height="250" alt="corea"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Corea del Sur</h4>
@@ -142,7 +142,7 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<a href="https://www.yomeanimo.com/working-holiday-japon-por-manu-y-virgi" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/japon.jpg" width="500" height="180" alt="japon"></a>
+				<a href="https://www.yomeanimo.com/working-holiday-japon-por-manu-y-virgi" target="blanck_"><img class="wow slideInRight right rounded" src="../assets/imagenes/japon.jpg" width="100%" height="250" alt="japon"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Japon</h4>
@@ -162,7 +162,7 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<a href="https://growproexperience.com/canada/vivir-y-trabajar-en-canada/" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/canada.jpg" width="500" height="180" alt="canada"></a>
+				<a href="https://growproexperience.com/canada/vivir-y-trabajar-en-canada/" target="blanck_"><img class="wow slideInRight right rounded" src="../assets/imagenes/canada.jpg" width="100%" height="250" alt="canada"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Canada</h4>
@@ -173,7 +173,7 @@
 
 		<div class="row vivirEn__noticias ">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<a href="https://www.clarin.com/servicios/emigrar-unidos-requisitos-vivir-trabajar-pais-norte_0_GFuq0AOLL.html" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/eeuu.jpg"  width="500" height="180" alt="eeuu"></a>
+				<a href="https://www.clarin.com/servicios/emigrar-unidos-requisitos-vivir-trabajar-pais-norte_0_GFuq0AOLL.html" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/eeuu.jpg" width="100%" height="250" alt="eeuu"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Estados Unidos</h4>
@@ -184,7 +184,7 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<a href="https://www.comovivirenargentina.com/" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/argentina.jpg" width="500" height="180" alt="argentina"></a>
+				<a href="https://www.comovivirenargentina.com/" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/argentina.jpg" width="100%" height="250" alt="argentina"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Argentina</h4>
@@ -204,7 +204,7 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<a href="https://growproexperience.com/nueva-zelanda/vivir-en-nueva-zelanda/" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/nueva-zelanda.jpeg" width="500" height="180" alt="persona1"></a>
+				<a href="https://growproexperience.com/nueva-zelanda/vivir-en-nueva-zelanda/" target="blanck_"><img class="wow slideInRight right rounded" src="../assets/imagenes/nueva-zelanda.jpeg" width="100%" height="250" alt="persona1"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Nueva Zelanda</h4>
@@ -215,7 +215,7 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<a href="https://masoportunidades.org/como-es-vivir-en-australia-lo-que-no-te-han-contado/" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/australia.jpg" width="500" height="180" alt="persona1"></a>
+				<a href="https://masoportunidades.org/como-es-vivir-en-australia-lo-que-no-te-han-contado/" target="blanck_"><img class="wow slideInRight right rounded" src="../assets/imagenes/australia.jpg" width="100%" height="250" alt="persona1"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En Australia</h4>
