--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -57,45 +57,48 @@
 	</nav>
 
 <!-- CONTACTO -->
-<div class="row">
-	<div class="col-lg-12 col-xs-12 col-md-12 col-sm-12">
-		<h3 class="wow bounceIn subtitulo__contacto">Contacto</h3>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12 col-xs-12 col-md-12 col-sm-12">
+			<h3 class="wow bounceIn subtitulo__contacto">Contacto</h3>
+		</div>
+	</div>
+
+	<div class="row justify-content-center">
+		<div class="col-lg-7 col-xs-12 col-md-12 col-sm-12 wow slideInLeft">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5508.939601787884!2d-58.53561786234837!3d-34.81512154370212!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf19b6f81d441cc3b!2sAeropuerto%20Internacional%20Ezeiza!5e0!3m2!1ses-419!2sar!4v1628719477763!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+		</div>
+
+		<div class="col-lg-5 col-xs-12 col-md-12 col-sm-12 wow slideInRight">
+			<div class="mb-3">
+			<label for="exampleFormControlInput1" class="form-label">Tu Nombre</label>
+			<input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+			</div>
+			<div class="mb-3">
+			<label for="exampleFormControlInput1" class="form-label">Tu Apellido</label>
+			<input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Apellido">
+			</div>
+			<div class="mb-3">
+			<label for="exampleFormControlInput1" class="form-label">Direccion Email</label>
+			<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ejemplo@gmail.com">
+			</div>
+			<div class="mb-3">
+			<label for="exampleFormControlTextarea1" class="form-label">Tu Consulta</label>
+			<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+			</div>	
+			<div class="form-check">
+			<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+			<label class="form-check-label" for="flexCheckDefault">
+				Quiero recibir mas Infomacion
+			</label>
+			</div>
+			<div class="col-12">
+				<button class="btn btn-primary" type="submit">ENVIAR</button>
+			</div>
+		</div>		
 	</div>
 </div>
 
-<div class="row justify-content-center">
-	<div class="col-lg-7 col-xs-12 col-md-12 col-sm-12 wow slideInLeft">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5508.939601787884!2d-58.53561786234837!3d-34.81512154370212!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf19b6f81d441cc3b!2sAeropuerto%20Internacional%20Ezeiza!5e0!3m2!1ses-419!2sar!4v1628719477763!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-	</div>
-
-	<div class="col-lg-5 col-xs-12 col-md-12 col-sm-12 wow slideInRight">
-		<div class="mb-3">
-		  <label for="exampleFormControlInput1" class="form-label">Tu Nombre</label>
-		  <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
-		</div>
-		<div class="mb-3">
-		  <label for="exampleFormControlInput1" class="form-label">Tu Apellido</label>
-		  <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Apellido">
-		</div>
-		<div class="mb-3">
-		  <label for="exampleFormControlInput1" class="form-label">Direccion Email</label>
-		  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ejemplo@gmail.com">
-		</div>
-		<div class="mb-3">
-		  <label for="exampleFormControlTextarea1" class="form-label">Tu Consulta</label>
-		  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-		</div>	
-		<div class="form-check">
-		<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-		<label class="form-check-label" for="flexCheckDefault">
-			Quiero recibir mas Infomacion
-		</label>
-		</div>
-		<div class="col-12">
-			<button class="btn btn-primary" type="submit">ENVIAR</button>
-		</div>
-	</div>		
-</div>
 
 	<!-- Footer -->
 <div class="row">
