--- a/pages/viajes.html
+++ b/pages/viajes.html
@@ -85,15 +85,15 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.youtube.com/watch?v=96eDjU21GnE" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/nueva-york.png" width="500" height="180" alt="new york"></a>
+				<a href="https://www.youtube.com/watch?v=96eDjU21GnE" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/nueva-york.png" width="100%" height="180" alt="new york"></a>
 				<p>20 lugares que tenes que visitar en Nueva York.</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.youtube.com/watch?v=iI6zLJ9DJIk" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/japon.jpg" width="500" height="180" alt="japon"></a>
+				<a href="https://www.youtube.com/watch?v=iI6zLJ9DJIk" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/japon.jpg" width="100%" height="180" alt="japon"></a>
 				<p>5 Cosas Imperdibles De Japon.</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a herf="https://www.youtube.com/watch?v=r1lqRWqwg10" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/bora-bora.jpg" width="500" height="180" alt="persona1"></a>
+				<a herf="https://www.youtube.com/watch?v=r1lqRWqwg10" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/bora-bora.jpg" width="100%" height="180" alt="persona1"></a>
 				<p>Polinesia Bora-Bora VIP </p>
 			</div>
 		</div>
@@ -105,15 +105,15 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.youtube.com/watch?v=RoaF7KBee7E" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/nueva-zelanda.jpeg" width="500" height="180" alt="new zeland"></a>
+				<a href="https://www.youtube.com/watch?v=RoaF7KBee7E" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/nueva-zelanda.jpeg" width="100%" height="180" alt="new zeland"></a>
 				<p>QUEENSTOWN</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.youtube.com/watch?v=vCIuNk6wHaI" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/universal.jpg" width="500" height="180" alt="universal"></a>
+				<a href="https://www.youtube.com/watch?v=vCIuNk6wHaI" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/universal.jpg" width="100%" height="180" alt="universal"></a>
 				<p>UNIVERSAL STUDIOS</p> 
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.felicesvacaciones.es/blog/los-mejores-lugares-para-hacer-turismo-de-aventura" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/senderista.jpeg" width="500" height="180" alt="aventura"></a>
+				<a href="https://www.felicesvacaciones.es/blog/los-mejores-lugares-para-hacer-turismo-de-aventura" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/senderista.jpeg" width="100%" height="180" alt="aventura"></a>
 				<p>Los mejores destinos para hacer Turismo aventura</p>
 			</div>
 		</div>
@@ -125,15 +125,15 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.youtube.com/watch?v=tRXOrsul_t8" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/paris-not.jpg" width="500" height="180" alt="paris"></a>
+				<a href="https://www.youtube.com/watch?v=tRXOrsul_t8" target="blanck_"><img class="wow slideInRight right rounded" src="../assets/imagenes/paris-not.jpg" width="100%" height="180" alt="paris"></a>
 				<p>Paris, La ciudad del Amor</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.youtube.com/watch?v=DvZ__Z3IHWk" target="blanck_"></a><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/nueva-york.png" width="500" height="180" alt="nueva-york"></a>
+				<a href="https://www.youtube.com/watch?v=DvZ__Z3IHWk" target="blanck_"></a><img class="wow slideInRight right rounded" src="../assets/imagenes/nueva-york.png" width="100%" height="180" alt="nueva-york"></a>
 				<p>La ciudad Mas linda</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.youtube.com/watch?v=EUEujSP1MRA" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/argentina.jpg" width="500" height="180" alt="argentina"></a>
+				<a href="https://www.youtube.com/watch?v=EUEujSP1MRA" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/argentina.jpg" width="100%" height="180" alt="argentina"></a>
 				<p>Buenos Aires, Argentina</p>
 			</div>
 		</div>
@@ -145,15 +145,15 @@
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.youtube.com/watch?v=d1jYUWJvrmo" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/disney.jpg" width="500" height="180" alt="disney"></a>
+				<a href="https://www.youtube.com/watch?v=d1jYUWJvrmo" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/disney.jpg" width="100%" height="180" alt="disney"></a>
 				<p>DISNEY</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a herf="https://www.etapainfantil.com/vacaciones-ninos-mundo" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/familia.jpg" width="500" height="180" alt="persona1"></a>
+				<a herf="https://www.etapainfantil.com/vacaciones-ninos-mundo" target="blanck_"><img class="wow slideInRight right rounded" src="../assets/imagenes/familia.jpg" width="100%" height="180" alt="persona1"></a>
 				<p>Destinos Para La Familia</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.youtube.com/watch?v=34awyPkfzcU" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/paris.jpg" width="500" height="180" alt="paris"></a>
+				<a href="https://www.youtube.com/watch?v=34awyPkfzcU" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/paris.jpg" width="100%" height="180" alt="paris"></a>
 				<p>DISNEY Paris</p>
 			</div>
 		</div>
