--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		</div>
 		
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
-			<a href="https://alanxelmundo.com/15-tips-de-viaje-para-principiantes/" target="blanck_"><img class=" rounded" src="assets/imagenes/not-tips.jpg" width="100%" height="300" alt="persona1"></a>
+			<a href="https://alanxelmundo.com/15-tips-de-viaje-para-principiantes/" target="blanck_"><img class=" rounded" src="assets/imagenes/not-tips.jpg" width="100%" height="300" alt="avion"></a>
 			<h4 class="wow slideInRight">15 Tips de Viajes</h4>
 			<p class="wow slideInRight">Si acabas de iniciarte en los viajes y no sabes armar ni tu maleta, este post te será de mucha ayuda.</p>
 		</div>
@@ -151,6 +151,11 @@
 			<p>Somos una Red de Divulgacion de turismo y emigraciones, que busca dar a luz el espiritu aventurero de cada persona, ademas de brindarte toda la informacion posible para tus planes turisticos.</p>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-xs-12 col-sm-12 center">
+			<a href="pages/quienes-somos.html">Ver Mas</a>
+		</div>
+	</div>
 </div>
 
 <!-- VIVIR EN... -->
@@ -164,7 +169,7 @@
 	<div class="row vivirEn__noticias">
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 right">
 			<h4 class="wow slideInRight">Vivir en Suiza</h4>
-			<p class="wow slideInRight">Asi se emigra a Suiza</p>
+			<p class="wow slideInRight">Asi se Emigra a Suiza</p>
 			<p class="justify wow slideInRight">Mica es una Argentina que emigro a Suiza y te cuenta su experiencia por si te interesa Vivir En Suiza.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6">
@@ -191,6 +196,12 @@
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 ">
 			<a href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="assets/imagenes/españa.jpg" width="100%" height="250" alt="españa"></a>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-xs-12 col-sm-12 center">
+			<a href="pages/vivir-en.html">Ver Mas</a>
 		</div>
 	</div>
 </div>
