--- a/pages/viajes.html
+++ b/pages/viajes.html
@@ -76,11 +76,17 @@
 			<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12 subtitulo__viajes">
 				<h3>Articulos de nuestros viajeros</h3>
 			</div>
+			<div class="container-fluid">
+				<form class="d-flex">
+				  <input class="form-control me-2" type="search" placeholder="Busca un Destino que te Interese" aria-label="Search">
+				  <button class="btn btn-outline-success" type="submit">buscar</button>
+				</form>
+			  </div>
 		</div>
 
 		<!-- Lo mas importante -->
 		<div class="row">
-			<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12 subtitulo__viajes">
+			<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12 subtitulo__viajes left">
 				<h4>Lo mas importante</h4>
 			</div>
 			
@@ -100,7 +106,7 @@
 
 		<!-- Turismo aventura -->
 		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 subtitulo__viajes">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 subtitulo__viajes left">
 				<h4>Turismo aventura</h4>
 			</div>
 			
@@ -120,7 +126,7 @@
 
 		<!-- Ciudades -->
 		<div class="row">
-			<div class="col-lg-12  col-md-12 col-sm-12 col-xs-12 subtitulo__viajes">
+			<div class="col-lg-12  col-md-12 col-sm-12 col-xs-12 subtitulo__viajes left">
 				<h4>Ciudades</h4>
 			</div>
 			
@@ -140,7 +146,7 @@
 
 		<!-- para los mas chicos -->
 		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 subtitulo__viajes">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 subtitulo__viajes left">
 				<h4>para los mas chicos</h4>
 			</div>
 			
