--- a/pages/viajes.html
+++ b/pages/viajes.html
@@ -79,7 +79,7 @@
 			<div class="container-fluid">
 				<form class="d-flex">
 				  <input class="form-control me-2" type="search" placeholder="Busca un Destino que te Interese" aria-label="Search">
-				  <button class="btn btn-outline-success" type="submit">buscar</button>
+				  <button class="btn btn-outline-success" type="submit">BUSCAR</button>
 				</form>
 			  </div>
 		</div>
