--- a/pages/viajes.html
+++ b/pages/viajes.html
@@ -119,7 +119,7 @@
 				  <p>UNIVERSAL STUDIOS</p> 
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
-				<a href="https://www.felicesvacaciones.es/blog/los-mejores-lugares-para-hacer-turismo-de-aventura" target="blanck_"><img class="img-fluid wow slideInRight right rounded" src="../assets/imagenes/senderista.jpeg" width="100%" height="180" alt="aventura"></a>
+				<a href="https://www.felicesvacaciones.es/blog/los-mejores-lugares-para-hacer-turismo-de-aventura" target="blanck_"><img class="wow slideInRight right rounded" src="../assets/imagenes/not-tips.jpg" width="100%" height="180" alt="aventura"></a>
 				  <p>Los mejores destinos para hacer Turismo aventura</p>
 			</div>
 		</div>
