modificacion en quienes somos / index seccion viajeros

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,6 +25,9 @@
     	<link rel="stylesheet" href="../css/bootstrap.min.css">
     -->
 
+	<!-- Linkeo de Iconos FontAwesome -->
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
 	<!-- Linkeo de ANIMATE.css y WOW.js -->
 		<link rel="stylesheet" href="../css/animate.css">
 
