--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -24,6 +24,9 @@
     <!-- segundo linkeo de bootstrap (Descarga)
     	<link rel="stylesheet" href="../css/bootstrap.min.css">
     -->
+	
+	<!-- Linkeo de Iconos FontAwesome -->
+		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 	<!-- Linkeo de ANIMATE.css y WOW.js -->
 		<link rel="stylesheet" href="../css/animate.css">
@@ -92,6 +95,98 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Viajeros  -->
+<div class="row">
+	<div class="col-lg-12 col-xs-12 col-sm-12 sponsors--color">
+		<h3 class="wow slideInLeft subtitulo__index">Conoce a Nuestros Viajeros</h3>
+	</div>
+</div>
+
+<div class="container ">
+	<div class="row">
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+			<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero1.jpg" width="100%" height="250" alt="persona1">
+			<h4 class="wow fadeInLeft">Alan</h4>
+			<p class="wow fadeInLeft">Viajero Mexicano/ Actor/ 40 Años</p>
+			<div class="viajeros--redes wow fadeInDown">
+				<ul>
+					<li><a href="https://es-la.facebook.com/enespanol/" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://www.instagram.com/?hl=es" class="instagram"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/" class="youtube"><i class="fab fa-youtube"></i></a></li>
+					<li><a href="https://twitter.com/?lang=es" class="twitter"><i class="fab fa-twitter-square"></i></a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+	  		<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero2.jpg" width="100%" height="250" alt="persona2">
+			<h4 class="wow fadeInLeft">Matias</h4>
+			<p class="wow fadeInLeft">Viajero Argentino/ Lic. Administracion / 21 Años</p>
+			<div class="viajeros--redes wow fadeInDown">
+				<ul>
+					<li><a href="https://es-la.facebook.com/enespanol/" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://www.instagram.com/?hl=es" class="instagram"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/" class="youtube"><i class="fab fa-youtube"></i></a></li>
+					<li><a href="https://twitter.com/?lang=es" class="twitter"><i class="fab fa-twitter-square"></i></a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+			<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero3.jpg" width="100%" height="250" alt="persona3">
+			<h4 class="wow fadeInLeft">Luis</h4>
+			<p class="wow fadeInLeft">Viajero Mexicano/ YouTuber / 30 años</p>
+			<div class="viajeros--redes wow fadeInDown">
+				<ul>
+					<li><a href="https://es-la.facebook.com/enespanol/" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://www.instagram.com/?hl=es" class="instagram"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/" class="youtube"><i class="fab fa-youtube"></i></a></li>
+					<li><a href="https://twitter.com/?lang=es" class="twitter"><i class="fab fa-twitter-square"></i></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+			<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero4.jpg" width="100%" height="250" alt="persona1">
+			<h4 class="wow fadeInLeft">Micaela</h4>
+			<p class="wow fadeInLeft">Viajera Argentina / Agencia de Viajes / 26 Años</p>
+			<div class="viajeros--redes wow fadeInDown">
+				<ul>
+					<li><a href="https://es-la.facebook.com/enespanol/" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://www.instagram.com/?hl=es" class="instagram"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/" class="youtube"><i class="fab fa-youtube"></i></a></li>
+					<li><a href="https://twitter.com/?lang=es" class="twitter"><i class="fab fa-twitter-square"></i></a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+	  		<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero5.jpg" width="100%" height="250" alt="persona2">
+			<h4 class="wow fadeInLeft">Claudia</h4>
+			<p class="wow fadeInLeft">Viajera Española / Agencia de Viajes / 25 Años</p>
+			<div class="viajeros--redes wow fadeInDown">
+				<ul>
+					<li><a href="https://es-la.facebook.com/enespanol/" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://www.instagram.com/?hl=es" class="instagram"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/" class="youtube"><i class="fab fa-youtube"></i></a></li>
+					<li><a href="https://twitter.com/?lang=es" class="twitter"><i class="fab fa-twitter-square"></i></a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+			<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero6.jpg" width="100%" height="250" alt="persona3">
+			<h4 class="wow fadeInLeft">Merakio</h4>
+			<p class="wow fadeInLeft">Viajero Argentino / YouTuber / 30 años</p>
+			<div class="viajeros--redes wow fadeInDown">
+				<ul>
+					<li><a href="https://es-la.facebook.com/enespanol/" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://www.instagram.com/?hl=es" class="instagram"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/" class="youtube"><i class="fab fa-youtube"></i></a></li>
+					<li><a href="https://twitter.com/?lang=es" class="twitter"><i class="fab fa-twitter-square"></i></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
 
 <!-- area -->
 <div class="container">
