--- a/index.html
+++ b/index.html
@@ -213,53 +213,9 @@
 <!-- NUESTROS VIAJEROS -->
 <div class="row">
 	<div class="col-lg-12 col-xs-12 col-sm-12 sponsors--color">
-		<h3 class="wow slideInLeft subtitulo__index">Conoce a Nuestros Viajeros</h3>
+		<h3 class="wow slideInLeft subtitulo__index"><a href="pages/quienes-somos.html" class="index__viajeros">Conoce a Nuestros Viajeros Haciendo Click Aqui.</a></h3>
 	</div>
 </div>
-
-<div class="container ">
-	<div class="row">
-		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
-			<img class="wow slideInLeft rounded" src="assets/imagenes/viajero1.jpg" width="100%" height="250" alt="persona1">
-			<h4 class="wow fadeInLeft">Alan</h4>
-			<p class="wow fadeInLeft">Viajero Mexicano/ Actor/ 40 Años</p>
-			<div class="viajeros--redes">
-				<ul>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="instagram"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="youtube"><i class="fab fa-youtube"></i></a></li>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="twitter"><i class="fab fa-twitter-square"></i></a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
-			<img class="wow slideInLeft rounded" src="assets/imagenes/viajero2.jpg" width="100%" height="250" alt="persona2">
-			<h4 class="wow fadeInLeft">Matias</h4>
-			<p class="wow fadeInLeft">Viajero Argentino/ Lic. Administracion / 21 Años</p>
-			<div class="viajeros--redes">
-				<ul>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="instagram"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="youtube"><i class="fab fa-youtube"></i></a></li>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="twitter"><i class="fab fa-twitter-square"></i></a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
-			<img class="wow slideInLeft rounded" src="assets/imagenes/viajero3.jpg" width="100%" height="250" alt="persona3">
-			<h4 class="wow fadeInLeft">Luis</h4>
-			<p class="wow fadeInLeft">Viajero Mexicano/ YouTuber / 30 años</p>
-			<div class="viajeros--redes">
-				<ul>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="instagram"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="youtube"><i class="fab fa-youtube"></i></a></li>
-					<li><a href="https://es-la.facebook.com/enespanol/" class="twitter"><i class="fab fa-twitter-square"></i></a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</div>	
 
 <!-- CONTACTO -->
 <div class="container ">
