minimos cambios index y viajes

--- a/pages/viajes.html
+++ b/pages/viajes.html
@@ -86,7 +86,7 @@
 				</form>
 			  </div>
 		</div>
-
+		
 		<!-- Lo mas importante -->
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12 subtitulo__viajes left">
@@ -95,15 +95,17 @@
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a href="https://www.youtube.com/watch?v=96eDjU21GnE" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/nueva-york.png" width="100%" height="180" alt="new york"></a>
-				  <p>20 lugares que tenes que visitar en Nueva York.</p>
+			  	  <h5>20 lugares que tenes que visitar en Nueva York.</h5>
 			</div>
+
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a href="https://www.youtube.com/watch?v=iI6zLJ9DJIk" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/japon.jpg" width="100%" height="180" alt="japon"></a>
-				  <p>5 Cosas Imperdibles De Japon.</p>
+				  <h5>5 Cosas Imperdibles De Japon.</h5>
 			</div>
+
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a herf="https://www.youtube.com/watch?v=r1lqRWqwg10" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/bora-bora.jpg" width="100%" height="180" alt="persona1"></a>
-				  <p>Polinesia Bora-Bora VIP </p>
+				  <h5>Polinesia Bora-Bora VIP<h5>
 			</div>
 		</div>
 
@@ -115,15 +117,15 @@
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a href="https://www.youtube.com/watch?v=RoaF7KBee7E" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/nueva-zelanda.jpeg" width="100%" height="180" alt="new zeland"></a>
-				  <p>QUEENSTOWN</p>
+				  <h5>QUEENSTOWN</h5>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a href="https://www.youtube.com/watch?v=vCIuNk6wHaI" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/universal.jpg" width="100%" height="180" alt="universal"></a>
-				  <p>UNIVERSAL STUDIOS</p> 
+				  <h5>UNIVERSAL STUDIOS</h5> 
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a href="https://www.felicesvacaciones.es/blog/los-mejores-lugares-para-hacer-turismo-de-aventura" target="blanck_"><img class="wow slideInRight right rounded" src="../assets/imagenes/not-tips.jpg" width="100%" height="180" alt="aventura"></a>
-				  <p>Los mejores destinos para hacer Turismo aventura</p>
+				  <h5>Los mejores destinos para hacer Turismo aventura</h5>
 			</div>
 		</div>
 
@@ -135,15 +137,15 @@
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a href="https://www.youtube.com/watch?v=tRXOrsul_t8" target="blanck_"><img class="wow slideInRight right rounded" src="../assets/imagenes/paris-not.jpg" width="100%" height="180" alt="paris"></a>
-				  <p>Paris, La ciudad del Amor</p>
+				  <h5>Paris, La ciudad del Amor</h5>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a href="https://www.youtube.com/watch?v=DvZ__Z3IHWk" target="blanck_"></a><img class="wow slideInRight right rounded" src="../assets/imagenes/nueva-york.png" width="100%" height="180" alt="nueva-york"></a>
-				<p>La ciudad Mas linda</p>
+				<h5>La ciudad Mas linda</h5>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a href="https://www.youtube.com/watch?v=EUEujSP1MRA" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/argentina.jpg" width="100%" height="180" alt="argentina"></a>
-				  <p>Buenos Aires, Argentina</p>
+				  <h5>Buenos Aires, Argentina</h5>
 			</div>
 		</div>
 
@@ -155,15 +157,15 @@
 			
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a href="https://www.youtube.com/watch?v=d1jYUWJvrmo" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/disney.jpg" width="100%" height="180" alt="disney"></a>
-				  <p>DISNEY</p>
+				  <h5>DISNEY</h5>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a herf="https://www.etapainfantil.com/vacaciones-ninos-mundo" target="blanck_"><img class="wow slideInRight right rounded" src="../assets/imagenes/familia.jpg" width="100%" height="180" alt="persona1"></a>
-				  <p>Destinos Para La Familia</p>
+				  <h5>Destinos Para La Familia</h5>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 align-items-center justify-content-evenly viajes__noticias">
 				<a href="https://www.youtube.com/watch?v=34awyPkfzcU" target="blanck_"><img class=" wow slideInRight right rounded" src="../assets/imagenes/paris.jpg" width="100%" height="180" alt="paris"></a>
-				  <p>DISNEY Paris</p>
+				  <h5>DISNEY Paris</h5>
 			</div>
 		</div>
 	</div>
